feat(susbcription): fetch namespace from shield project
